[mac][views] Notify web_contents focused.

This fix allow to FocusManager know about web_contents was focused.
It also fix a lot of test for mac_views_browser by example:
BrowserFocusTest.FocusOnReload,
BrowserFocusTest.InterstitialFocus ...

BUG=610561, 21875

Review-Url: https://codereview.chromium.org/2005953002
Cr-Commit-Position: refs/heads/master@{#397353}

Former-commit-id: 4d67971369b316f1d7e4e0330412a3d94b4418ba